fixed the background color and spacing of account item

--- a/src/pages/Account/AccountItem/accountItem.module.scss
+++ b/src/pages/Account/AccountItem/accountItem.module.scss
@@ -4,6 +4,7 @@
     border: 1px solid var(--ion-color-light);
     border-radius: 11px;
     align-items: center;
+    margin-bottom: 20px;
 
     .innerContainer {
         display: flex;
@@ -13,7 +14,7 @@
     }
 
     .iconContainer {
-        background: linear-gradient(153.78deg, var(--ion-icon-primary) 29.36%, var(--ion-color-quaternary) 119.24%);
+        background: linear-gradient(153.78deg, var(--ion-color-primary) 29.36%, var(--ion-color-quaternary) 119.24%);
         box-shadow: inset 0px 2px 3px var(--ion-color-medium);
         border-radius: 10px 0px 0px 10px;
         flex: 0.2;
